--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
-milk, eggs, bread, hummus
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8">
+        <title>Unordered List</title>
+    </head>
+    <body>
+        <ul>
+            <li>milk,</li>
+            <li>eggs,</li>
+            <li>bread,</li>
+            <li>hummus</li>
+        </ul>
+        
+    </body>
+</html>
